fix css to prevent overflow

--- a/style.css
+++ b/style.css
@@ -6,16 +6,18 @@ body{
     background: linear-gradient(to right, #05386B, #18426d);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: auto;
 }
 .type-output{
     color: #fff;
     font-size: 20px;
 }
 .wrapper{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 200px;
+    margin-bottom: 100px;
     background: #022140;
     border-radius: 10px;
     padding: 30px;
@@ -164,10 +166,7 @@ h1{
 }
 footer {
     margin-top: 30px;;
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-bottom: 30px;
 }
 
 footer a {
